Make sure that navbar doesn't create a scrollbar on small screens

--- a/web/content/docs.css
+++ b/web/content/docs.css
@@ -23,11 +23,11 @@ nav.sidebar {
   }
 
   main {
-    order: 0;
+    width: 100%;
   }
 
   nav.sidebar {
-    order: 1;
+    width: 100%;
   }
 }
 
