--- a/web/content/site.css
+++ b/web/content/site.css
@@ -48,10 +48,8 @@ header {
 
 nav.nav {
   display: inline-block;
-  width: 80%;
   border: 0;
-  margin: 0;
-  padding: 0 10%;
+  margin: 0 auto;
 }
 
 .nav ul {
